# org-zotero-rust

./: Cargo.toml  LICENSE  README.md
config/: config.toml
src/: main.rs  settings.rs
templates/: document.org.tera  highlights.tera
