[package]
name = "org-zotero-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
config = { version = "0.14.1", features = ["toml"] }
md5 = "0.7.0"
once_cell = "1.20.2"
rusqlite = "0.34.0"
serde = { version = "1.0.215", features = ["derive"] }
slug = "0.1.6"
tera = "1.20.0"
uuid = { version = "1.11.0", features = ["v4"] }
